# wallpaper_not-engine_linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  convert_to_h264.sh
cmake/: CompilerFlags.cmake  FindWaylandProtocols.cmake
include/universal-wallpaper/: audio_detector.h  config.h  display_manager.h  fullscreen_detector.h  mpv_wrapper.h  renderer.h  utils.h  wayland_backend.h  wayland_protocols.h  x11_backend.h
src/audio/: audio_detector.cpp
src/backends/: wayland_backend.cpp  x11_backend.cpp
src/config/: config.cpp
src/core/: display_manager.cpp  fullscreen_detector.cpp  main.cpp  utils.cpp
src/media/: mpv_wrapper.cpp
src/rendering/: renderer.cpp
